--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -115,7 +115,7 @@
         <li class="nav-dropdown">
           <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Attend</button>
           <ul class="nav-dropdown-menu" role="menu">
-            <li role="menuitem"><a href="/#salon">January Salon Event</a></li>
+            <li role="menuitem"><a href="/salon/">Salon Events</a></li>
             <li role="menuitem"><a href="/#main-event">October 2026 Main Event</a></li>
             <li role="menuitem"><a href="/faq/">FAQ</a></li>
           </ul>
