Add past speakers to the speakers page.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -273,7 +273,7 @@
           <h4>Attend</h4>
           <ul>
             <li><a href="/tickets/">Get Tickets</a></li>
-            <li><a href="/speakers/">2026 Speakers</a></li>
+            <li><a href="/speakers/">Speakers</a></li>
             <li><a href="/faq/">FAQ</a></li>
           </ul>
         </div>
