Reduce Apply to Speak links site-wide.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -128,7 +128,6 @@
         <li class="nav-dropdown">
           <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Support</button>
           <ul class="nav-dropdown-menu" role="menu">
-            <li role="menuitem"><a href="/speak/">Apply to Speak</a></li>
             <li role="menuitem"><a href="/volunteer/">Volunteer</a></li>
             <li role="menuitem"><a href="/sponsor/">Sponsor</a></li>
             <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge/">Donate</a></li>
@@ -283,6 +282,7 @@
             <li><a href="/donate-local-nonprofit-in-breckenridge/">Donate</a></li>
             <li><a href="/volunteer/">Volunteer</a></li>
             <li><a href="/sponsor/">Sponsor</a></li>
+            <li><a href="/speak/">Apply to Speak</a></li>
           </ul>
         </div>
         <div class="footer-column">
