--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -2763,3 +2763,18 @@ body.layout-post {
   max-width: 800px;
   margin: 0 auto;
 }
+
+.my-48 {
+  margin-top: 48px;
+  margin-bottom: 48px;
+}
+
+.my-60 {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.my-80 {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
