--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -2778,3 +2778,11 @@ body.layout-post {
   margin-top: 80px;
   margin-bottom: 80px;
 }
+
+.bg-cream {
+  background: var(--cream);
+}
+
+.bg-sand {
+  background: var(--sand);
+}
