Create a shared classes for auto-fitting grids.

--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -2786,3 +2786,9 @@ body.layout-post {
 .bg-sand {
   background: var(--sand);
 }
+
+.grid-auto-fit {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 24px;
+}
